k8s/apps/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: example
spec:
  selector:
    app: example
  ports:
  - name: http
    port: 80
    targetPort: http
  type: ClusterIP
